--- a/compose.yaml
+++ b/compose.yaml
@@ -8,7 +8,7 @@ services:
     ports:
       - 5173:5173
     environment:
-      VITE_BACKEND_URL: https://localhost:1234/
+      VITE_BACKEND_URL: http://localhost:1234/
     
     develop:
       watch:
