--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-json-view": "^1.21.3"
+    "react-json-view": "^1.21.3",
+    "react-router": "^7.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
